--- a/components/x-ddtselezione.html
+++ b/components/x-ddtselezione.html
@@ -43,7 +43,7 @@
 				}
 			});
 			/*focus management*/
-			this.focusAbleContainer = this.root;
+			this.focusAbleContainer = this.root.host;
 		},
 		/*focus management*/
 		focusedID: -1,
