--- a/components/x-query-window.html
+++ b/components/x-query-window.html
@@ -50,7 +50,8 @@
 		properties: {
 			params: {
 				type: String,
-				notify: true
+				notify: true,
+				observer:'paramsChanged'
 			},
 			jsonList: {
 				type: String,
