--- a/components/x-articoloiva.html
+++ b/components/x-articoloiva.html
@@ -2,7 +2,7 @@
 	<template>
 		<label>
 			Art.Iva
-			<x-input type="text" value="{{value}}" maxlength="3" size="3"></x-input>
+			<x-input type="text" value="{{value}}" maxlength="3" size="3" disabled="{{disabled}}"></x-input>
 		</label>
 	</template>
 	<script>
@@ -12,6 +12,10 @@
 			value: {
 				type: String,
 				notify: true
+			},
+			disabled: {
+				type: Boolean,
+				notify: true,
 			}
 		},
 		value: '',
