--- a/components/x-pesolordo.html
+++ b/components/x-pesolordo.html
@@ -1,6 +1,6 @@
 <dom-module id="x-pesolordo">
 	<template>
-		<x-numero interi="6" decimali="2" label="P.Lordo">{{value}}</x-numero>
+		<x-numero interi="6" decimali="2" label="P.Lordo" disabled="{{disabled}}">{{value}}</x-numero>
 	</template>
 	<script>
 	Polymer({
@@ -9,6 +9,10 @@
 			value: {
 				type: String,
 				notify: true
+			},
+			disabled: {
+				type: Boolean,
+				notify: true,
 			}
 		},
 		value: '',
